[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/font/menu_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/StartMenu.gd" type="Script" id=2]

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_bottom = 1.0
margin_right = 480.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 163.0
margin_top = 99.0
margin_right = 317.0
margin_bottom = 170.0

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 154.0
margin_bottom = 21.0
focus_neighbour_bottom = NodePath("../ToggleMusicButton")
focus_next = NodePath("../ToggleMusicButton")
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PLAY"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToggleMusicButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 154.562
margin_bottom = 46.0
focus_neighbour_top = NodePath("../PlayButton")
focus_neighbour_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath(".")
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Music: On"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 154.0
margin_bottom = 71.0
focus_neighbour_top = NodePath("../ToggleMusicButton")
focus_previous = NodePath("../ToggleMusicButton")
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "QUIT"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CenterContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ToggleMusicButton" to="." method="_on_ToggleMusicButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
